OO-7562: Add external ref as variable to quality generator title